test/TestSuite/Syntax/Errors/task_exists.tjp
project test "Test" "1.0" 2009-02-11 +1m 

task t "First task t"

# MARK: error 6 task_exists
task t "Second task t"

